--- a/git_example.ipynb
+++ b/git_example.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyNbhydHu0xRr0SJzFiPz+KJ",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,26 +17,36 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/raaweya/Testproj/blob/main/git_example.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "yb5-P_MWZ4i9",
-        "outputId": "303f3302-14af-43f6-90ae-83aed3955ae6"
+        "outputId": "94f0bfe9-b283-451d-dfec-e0c30a618ed1"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "3\n"
+            "12\n"
           ]
         }
       ],
       "source": [
-        "a=1\n",
+        "a=10\n",
         "b=2\n",
         "print(a+b)"
       ]
